src/objects/Person_Debts__c.object
<CustomObject>
    <fields>
        <fullName>ApplicantDebt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Person&apos;s Debts (Account)</relationshipLabel>
        <relationshipName>Person_s_Debts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CardRepayment3__c</fullName>
        <formula>Outstanding_balance__c *0.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Repayment 3%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cleared_before_HPP_starts__c</fullName>
        <label>Cleared before HPP starts?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_last_payment__c</fullName>
        <label>Date of last payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_Lender_Name__c</fullName>
        <label>Lender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_how_much_will_be_repaid__c</fullName>
        <label>If yes, how much will be repaid?</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_repayment__c</fullName>
        <label>Monthly repayment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_balance__c</fullName>
        <label>Outstanding balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_of_debt__c</fullName>
        <label>Owner of debt</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Person&apos;s Debts</relationshipLabel>
        <relationshipName>Person_s_Debts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PaidOffDebt__c</fullName>
        <label>PaidOffDebt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secured_on_property__c</fullName>
        <label>Secured on property?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_debt__c</fullName>
        <label>Type of debt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Hire purchase</fullName>
                </value>
                <value>
                    <fullName>Store Card</fullName>
                </value>
                <value>
                    <fullName>Mail order: monthly repayment</fullName>
                </value>
                <value>
                    <fullName>Mail order: account</fullName>
                </value>
                <value>
                    <fullName>Personal Contract Hire (Car scheme)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_Dept_Be_Paid_Off__c</fullName>
        <formula>if( Will_this_debt_be_paid_off_by_this_app__c , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will Dept Be Paid Off</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_this_debt_be_paid_off_by_this_app__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will this debt be fully or partially repaid by this application?</inlineHelpText>
        <label>Will this debt be paid off by this app?</label>
        <type>Checkbox</type>
    </fields>
    <label>Person Debts</label>
    <nameField>
        <displayFormat>PD{0000}</displayFormat>
        <label>Person Debts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person&apos;s Debts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>